# backend

./: .env_example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  LICENSE  Makefile  README.md  jenkins_test.txt  manage.py  pyproject.toml  requirements.txt  serverdp.yml
.github/workflows/: django.yml
client/: Dockerfile
core/apps/basket/: apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
core/apps/categories/: admin.py  apps.py  factories.py  filters.py  models.py  serializers.py  services.py  urls.py  views.py
core/apps/common/: models.py  pagination.py
core/apps/orders/: admin.py  urls.py  (+3 more)
core/config/: asgi.py  celery_app.py  test_settings.py  urls.py  wsgi.py
docker_compose/: docker-compose.yml  storages.yml
kubernetes/: dj-dep.yaml  front.yaml  ing.yaml  lb.yaml  main.tf  pg-dp.yaml  vars.tf
kubernetes/team-challenge-chart/: Chart.yaml  values.yaml
kubernetes/terraform/: cluster.tf
kubernetes/yaml/: cert.yaml  lb-front.yaml
nginx/: Dockerfile
serverdp/tasks/: main.yml
staticfiles/drf-yasg/: insQ.js
team_challenge/: .env  .gcloudignore  .variables  Dockerfile  app.yaml  db.sqlite3  docker-compose.yml  entrypoint.sh  manage.py  prometheus.yml  pyproject.toml  requirements.txt  teamchallenge-2105a95396e0.json
team_challenge/basket/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
team_challenge/basket/migrations/: 0001_initial.py  0002_cartanonymous_alter_category_description_and_more.py  0002_cartanonymous_cartanonymousitem_delete_category_and_more.py  0002_delete_category.py  0002_initial.py  0002_remove_cartanonymous_session_key_and_more.py  0002_remove_cartitem_cart_remove_cartitem_product_and_more.py  0003_remove_cartanonymousitem_cart_and_more.py  0003_tent.py  0004_alter_cart_session.py  0004_productdetail_delete_tent.py  0005_alter_cart_session.py  0005_product_brand_product_description_and_more.py  0006_alter_cart_session.py  0006_cart_cartitem_cart_products_cart_user.py  0007_alter_cart_session.py  0007_prodfuct.py  0008_alter_cart_session.py  0008_delete_prodfuct.py  0009_cartanonymous_remove_cart_session_alter_cart_user_and_more.py  0009_produfct.py  0010_cartanonymous_time_create_cartanonymous_time_update_and_more.py  0010_delete_produfct.py  0011_alter_product_image.py  0012_brand_category_product_category_product_rate.py  0013_alter_product_brand_alter_product_category.py
team_challenge/categories/: admin.py  factories.py  filters.py  models.py  serializers.py  services.py  urls.py  views.py
team_challenge/categories/migrations/: 0001_initial.py  0002_remove_category_description_category_image_and_more.py  0003_category_slug_subcategory_slug.py  0003_remove_category_subcategories.py
team_challenge/categories/tests/: test_models_and_serializers.py  test_views.py
team_challenge/certbot/conf/accounts/acme-v02.api.letsencrypt.org/directory/4db9cbcd3587bdd0f8efaecf8c09e18b/: meta.json  private_key.json  regr.json
team_challenge/etc/letsencrypt/accounts/acme-v02.api.letsencrypt.org/directory/7cb3fdaec142383320fc739a6091edd4/: meta.json  private_key.json  regr.json
team_challenge/etc/letsencrypt/accounts/acme-v02.api.letsencrypt.org/directory/b976a42938c881ac447cc3fd0dce96c8/: meta.json  private_key.json  regr.json
team_challenge/nginx/: Dockerfile  default.conf  nginx.conf
team_challenge/orders/: admin.py  models.py  serializers.py  urls.py  views.py
team_challenge/orders/migrations/: 0001_initial.py  0002_address_order_payment_method_alter_order_ship_method_and_more.py  0002_address_remove_order_ship_method_and_more.py  0002_user_remove_order_product_remove_order_quantity_and_more.py  0003_rename_adress_user_address_and_more.py  0003_rename_ship_method_order_delivery_method_and_more.py  0004_alter_address_city_alter_order_delivery_method_and_more.py  0005_alter_address_address.py
team_challenge/products/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
team_challenge/products/migrations/: 0001_initial.py  0002_alter_brand_description_alter_product_brand_and_more.py  0002_alter_product_category.py  0002_product_features_product_subscription_and_more.py  0002_product_old_price.py  0003_alter_brand_description_alter_product_brand_and_more.py  0003_alter_product_brand.py  0003_alter_product_description.py  0004_product_subcategory.py  0005_product_color.py  0006_color.py  0007_alter_product_color.py  0007_remove_product_color.py  0008_product_color.py  0009_merge_0007_alter_product_color_0008_product_color.py
team_challenge/team_challenge/: asgi.py  celery_app.py  settings.py  test_settings.py  urls.py  wsgi.py
team_challenge/users/: admin.py  models.py  serializers.py  urls.py  views.py
team_challenge/users/migrations/: 0001_initial.py  0002_user_password_confirmation_alter_user_password.py  0003_remove_user_password_confirmation.py  0004_alter_user_options_alter_user_managers_and_more.py  0005_rename_is_admin_user_is_staff_user_groups_and_more.py
terraform/: firewall.tf  keys.tf  main.tf  vars.tf  vm.tf
tests/categories/: conftest.py  factories.py  test_models_and_serializers.py  test_views.py
tests/commands/: test_commands.py
tests/products/: test_products.py
(+33 files in other folders)
